objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PLOC_Opportunity_Stage__c</fullName>
        <description>PLOC Opportunity</description>
        <label>PLOC Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify Prospect (1.0)</fullName>
                </value>
                <value>
                    <fullName>Qualify Appointment Set (1.5)</fullName>
                </value>
                <value>
                    <fullName>Qualify Prospect (2.0)</fullName>
                </value>
                <value>
                    <fullName>Solution Appointment Set (3.0)</fullName>
                </value>
                <value>
                    <fullName>Introduce Solution (4.0)</fullName>
                </value>
                <value>
                    <fullName>Solution Introduction Complete (5.0)</fullName>
                </value>
                <value>
                    <fullName>Discovery Workshop (Verbal Commitment) (6.0)</fullName>
                </value>
                <value>
                    <fullName>Virtual Workshop (6.2)</fullName>
                </value>
                <value>
                    <fullName>Onsite Discovery Roundtable (6.3)</fullName>
                </value>
                <value>
                    <fullName>Onsite Discovery Workshop (6.5)</fullName>
                </value>
                <value>
                    <fullName>Present Solution (7.0)</fullName>
                </value>
                <value>
                    <fullName>Due Dilligence &amp; Planning (8.0)</fullName>
                </value>
                <value>
                    <fullName>Negotiate SOW (9.0)</fullName>
                </value>
                <value>
                    <fullName>Finalize SOW (10.0)</fullName>
                </value>
                <value>
                    <fullName>Integration and Implementation (11.0)</fullName>
                </value>
                <value>
                    <fullName>Manage Account (12.0)</fullName>
                </value>
                <value>
                    <fullName>District not ready - Leadership changes (200.1)</fullName>
                </value>
                <value>
                    <fullName>District not ready - Data Issues (200.2)</fullName>
                </value>
                <value>
                    <fullName>District not ready - Technology Issue (200.3)</fullName>
                </value>
                <value>
                    <fullName>District not ready - Funding Issue (200.4)</fullName>
                </value>
                <value>
                    <fullName>District not interested (200.5)</fullName>
                </value>
                <value>
                    <fullName>IBM Target (200.6)</fullName>
                </value>
                <value>
                    <fullName>District Not Ready - Resources (200.7)</fullName>
                </value>
                <value>
                    <fullName>District Not Ready - Standards (200.8)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPE_Carrier__c</fullName>
        <label>PPE Carrier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE_Comments__c</fullName>
        <label>PPE Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PPE_Date_Shipment_left_DC__c</fullName>
        <label>PPE Date Shipment left DC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPE_Delivered_Sucessfully__c</fullName>
        <label>PPE Delivered Sucessfully</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPE_Delivery_Date__c</fullName>
        <label>PPE Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPE_New_Account_Number__c</fullName>
        <inlineHelpText>The new account number that the PPE order will be placed on.</inlineHelpText>
        <label>PPE New Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE_Order_Date__c</fullName>
        <label>PPE Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPE_Package_Signed_By__c</fullName>
        <label>PPE Package Signed By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE_Progress__c</fullName>
        <description>PPE-CBFS Personal protection equipment</description>
        <inlineHelpText>Qualifying–Customer needs product
Engage-Specs, pricing and payment terms
Committed Order – Customer agrees with the terms making payment
Delivered–Product delivered</inlineHelpText>
        <label>PPE Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualifying</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Committed Order</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPE_SKU__c</fullName>
        <label>PPE SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRM_Opportunity_Link__c</fullName>
        <formula>$Label.PRM_Link + &quot;/s/opportunity/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRM Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Opp__c</fullName>
        <formula>IF(
				OR( ($User.Id = CreatedById), (OwnerId = $User.Id),($User.ContactId= Partner_Sub_Agent_Contact__c)), 
				true, 
				false
)</formula>
        <label>Partner Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Pilot_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Pilot Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Sub_Agent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Sub-Agent Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account must be of type &quot;Partner&quot;.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Partner Sub-Agent Account)</relationshipLabel>
        <relationshipName>Opportunities_Partner_Sub_Agent_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Sub_Agent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Sub-Agent Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Contact must at the Partner Sub-Agent Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Partner_Sub_Agent_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_Partner_Sub_Agent_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Sub_Agent_Number__c</fullName>
        <formula>Account.Partner_Sub_Agent_Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Sub-Agent Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the payment been received by Office Depot?</inlineHelpText>
        <label>Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>PPE-CBFS</description>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100%_Prepaid</fullName>
                    <label>100% Prepaid</label>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>50% Prepaid, 50% Due at Delivery</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Play_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Play_ID</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Play_ID)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlusMinus_Opp_Amount__c</fullName>
        <formula>IF( text(StageName) = &apos;0%-Lost&apos;,-1 * Opportunity_Amount__c, Opportunity_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlusMinus_Opp_Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pot_Disposition_Reason__c</fullName>
        <label>Pot Disposition Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pot_Disposition__c</fullName>
        <label>Pot Disposition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pot_Other_Disposition_Reason__c</fullName>
        <label>Pot Other Disposition Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Amt__c</fullName>
        <formula>Account.Potential_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_DeDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential DeDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Warning_Key__c</fullName>
        <label>Potential Warning Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preliminary_Research_done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preliminary Research done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preliminary_conversation_scoping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preliminary conversation / scoping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prepare_Present_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepare &amp; Present Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prepare_for_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepare for Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prepare_for_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepare for appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Present_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_PLOC_Opportunity_Stage__c</fullName>
        <label>Previous PLOC Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Stage__c</fullName>
        <description>Indicates the previous stage of the Opportunity</description>
        <inlineHelpText>Indicates the previous stage of the Opportunity</inlineHelpText>
        <label>Previous Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Summary_Stage__c</fullName>
        <label>Previous Summary Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Chane_Notice__c</fullName>
        <label>Price Chane Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Competitor1_DonotInUse__c</fullName>
        <label>Do Not Use Primary Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Competitor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <errorMessage>Field Sales (US) Opportunity can be associated to US Opportunity Competitor only and GT Field Sales Opportunity can be associated to Canada Opportunity Competitor only.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Field Sales (US), PPE-CBFS</value>
            </filterItems>
            <filterItems>
                <field>OpportunityCompetitor__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>US</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>GT Field Sales, GT CompuCom Referral</value>
            </filterItems>
            <filterItems>
                <field>OpportunityCompetitor__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Canada</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OpportunityCompetitor__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor_1__c</fullName>
        <label>Do Not Use Primary Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prioritize_Prospect_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prioritize Prospect Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probability_Move_to_Verbal_Close__c</fullName>
        <inlineHelpText>Actual Percentage to Close</inlineHelpText>
        <label>Probability Move to Executing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>90%+</fullName>
                </value>
                <value>
                    <fullName>80% - 90%</fullName>
                </value>
                <value>
                    <fullName>70% - 80%</fullName>
                </value>
                <value>
                    <fullName>50% - 70%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Subtype__c</fullName>
        <label>Product Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3 Ply Masks</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Accessories – Cabling</fullName>
                </value>
                <value>
                    <fullName>Accessories - I/O</fullName>
                </value>
                <value>
                    <fullName>Accessories - PC &amp; Server Upgrades</fullName>
                </value>
                <value>
                    <fullName>Antibacterial Soap</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Automatic Toner Replenishment (ATR)</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Blue Ribbon</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Brand Identity </fullName>
                </value>
                <value>
                    <fullName>Branding/Fundraising</fullName>
                </value>
                <value>
                    <fullName>Break room</fullName>
                    <label>Break Room</label>
                </value>
                <value>
                    <fullName>Business Essentials</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>C2 Collaborative</fullName>
                </value>
                <value>
                    <fullName>Cameras</fullName>
                </value>
                <value>
                    <fullName>Charging Carts</fullName>
                </value>
                <value>
                    <fullName>Checks and Forms </fullName>
                </value>
                <value>
                    <fullName>Classroom Technology</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Cleaning &amp; Maintenance</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Pilot Programs-Collaborative Classroom</fullName>
                    <label>Collaborative Classroom</label>
                </value>
                <value>
                    <fullName>Computing - Chromebooks</fullName>
                </value>
                <value>
                    <fullName>Computing - Desktops</fullName>
                </value>
                <value>
                    <fullName>Computing - Laptops</fullName>
                </value>
                <value>
                    <fullName>Computing - Tablets</fullName>
                </value>
                <value>
                    <fullName>Computing - Workstations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Supplies</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>CBFS</fullName>
                </value>
                <value>
                    <fullName>CBS/Facilities</fullName>
                </value>
                <value>
                    <fullName>Contract Furniture</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Ergonomics</fullName>
                </value>
                <value>
                    <fullName>Facilities- Coffee</fullName>
                </value>
                <value>
                    <fullName>Filing &amp; Binding</fullName>
                </value>
                <value>
                    <fullName>Furniture - Catalog</fullName>
                </value>
                <value>
                    <fullName>Furniture - Interiors</fullName>
                </value>
                <value>
                    <fullName>General Consultation</fullName>
                </value>
                <value>
                    <fullName>Ink &amp; Toner</fullName>
                </value>
                <value>
                    <fullName>Instructional Solutions</fullName>
                </value>
                <value>
                    <fullName>K-12 Growth</fullName>
                </value>
                <value>
                    <fullName>Labels &amp; Forms</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Logo Design</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>Multi-Category</fullName>
                </value>
                <value>
                    <fullName>Office Essentials</fullName>
                </value>
                <value>
                    <fullName>Office Products</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Print and Promo</fullName>
                </value>
                <value>
                    <fullName>Print Services</fullName>
                </value>
                <value>
                    <fullName>School Supplies</fullName>
                </value>
                <value>
                    <fullName>Search Marketing</fullName>
                </value>
                <value>
                    <fullName>SEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Ongoing__c</fullName>
        <inlineHelpText>A one time purchase is &quot;project&quot; based (ie large furniture deal). All others should be considered ongoing business</inlineHelpText>
        <label>Project/Ongoing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                    <default>true</default>
                    <label>Ongoing</label>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_IMU__c</fullName>
        <label>Projected IMU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposal_cnt__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &apos;100%-Won&apos;),1,
IF(ISPICKVAL(StageName, &apos;0%-Lost&apos;), 1,
IF(ISPICKVAL(StageName, &apos;0%-Walkaway&apos;), 1,
IF(ISPICKVAL(StageName, &apos;50%-Presentation&apos;), 1,
IF(ISPICKVAL(StageName, &apos;75%-Negotiate &amp; Finalize&apos;), 1,
IF(ISPICKVAL(StageName, &apos;90%-Execute&apos;), 1,0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_opp_amt__c</fullName>
        <formula>IF( Proposal_cnt__c = 1 ,  Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_has_positive_potential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospect has positive potential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PushCount__c</fullName>
        <label>PushCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualifying_Deal_Lead_Temporary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created temporarily to cross verify created leads for &apos;Qualify&apos; opportunities and will be deleted once the ticket is closed. 02883861 - Qualifying Deal Data Updates. https://officedepot.atlassian.net/browse/NAIT-129950</description>
        <label>Qualifying Deal Lead</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Lead.RecordTypeId</field>
                <operation>equals</operation>
                <value>Qualifying Lead (US)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Qualify Opportunities</relationshipLabel>
        <relationshipName>Qualify_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <description>RecordType as Text</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Product_Count__c</fullName>
        <label>Recurring Product Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Referral_Client_Type__c</fullName>
        <label>Referral Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Notes__c</fullName>
        <inlineHelpText>Office Depot referral notes</inlineHelpText>
        <label>OD Referral Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <inlineHelpText>Inbound = received from Partner
Outbound = sent to Partner
BOT = balance of trade</inlineHelpText>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>BOT</fullName>
                </value>
                <value>
                    <fullName>BOT-Inbound</fullName>
                    <isActive>false</isActive>
                    <label>BOT-Inbound</label>
                </value>
                <value>
                    <fullName>BOT-Outbound</fullName>
                    <isActive>false</isActive>
                    <label>BOT-Outbound</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <inlineHelpText>Email of Office Depot Associate who sourced this deal.</inlineHelpText>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Employee_ID__c</fullName>
        <description>Employee ID of Office Depot Store Associate who sourced this deal. Used for SPIFF reporting.</description>
        <inlineHelpText>Employee ID of Office Depot Store Associate who sourced this deal.</inlineHelpText>
        <label>Referrer Employee ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Name__c</fullName>
        <description>Name of Office Depot Associate who sourced this deal.  Used for SPIFF reporting.</description>
        <inlineHelpText>Name of Office Depot Associate who sourced this deal.</inlineHelpText>
        <label>Referrer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <inlineHelpText>Phone number of Office Depot Associate who sourced this deal.</inlineHelpText>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Refine_Value_Proposition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refine Value Proposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is this opportunity related to site? If so please select.</inlineHelpText>
        <label>Related Site</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Related site must be a child site of the Opportunity&apos;s Account. You have picked a site that is not related to the account.  
Quick Tip: Create an opportunity from a Site Page and it will bring in Account &amp; Site info automatically.</errorMessage>
            <filterItems>
                <field>Account.Related_Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notContain</operation>
                <value>(Tech-Zone)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepLeadSource__c</fullName>
        <label>Rep Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respond_to_RFP_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for Grand and Toy reporting: User prepared a bid themselves using bid builder or left an acquisition price list or put something else custom together</description>
        <label>Associate Built Proposal Presented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Respond_to_RFP_Bid_team_150k__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for Grand and Toy: Means you sent a request to the bid and contracts teams for them to respond to an RFP and price due to the opportunity being over $150k</description>
        <label>Respond to RFP (Bid team &gt;150k+)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Confirm_Final_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review &amp; Confirm Final Details</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>